PK-29 - Workouts page - Front-end - fixing modal x loader visibility

--- a/Application/Source/PeakPerformance.Client/Workspace/src/app/components/page-loader/page-loader.css
+++ b/Application/Source/PeakPerformance.Client/Workspace/src/app/components/page-loader/page-loader.css
@@ -8,7 +8,7 @@
     top: 0;
     left: 0;
     background-color: rgba(0, 0, 0, 0.6);
-    z-index: 1000;
+    z-index: 1500;
 }
 .backdrop .loader {
     width: 48px;
